--- a/website/package.json
+++ b/website/package.json
@@ -3,13 +3,12 @@
     "examples": "docusaurus-examples",
     "start": "docusaurus-start",
     "build": "docusaurus-build",
-    "deploy": "docusaurus-publish --help",
+    "deploy": "docusaurus-publish",
     "write-translations": "docusaurus-write-translations",
     "version": "docusaurus-version",
     "rename-version": "docusaurus-rename-version"
   },
   "devDependencies": {
-    "docusaurus": "^1.0.6"
-  },
-  "homepage": "https://memory-cloud.github.io/"
+    "docusaurus": "^1.0.9"
+  }
 }
