--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,29 +1,32 @@
-machine:
-  node:
-    version: 6.10.3
-  npm:
-    version: 3.10.10
+# If you only one circle to run on direct commits to master, you can uncomment this out
+# and uncomment the filters: *filter-only-master down below too
+#
+aliases:
+ - &filter-only-master
+   branches:
+     only:
+       - master
 
-test:
-  override:
-    - "true"
+version: 2
+jobs:
+  deploy-website:
+    docker:
+      # specify the version you desire here
+      - image: circleci/node:7.10
 
-deployment:
-  website:
-    branch: master
-    commands:
-      # configure git user
-      - git config --global user.email "[email protected]"
-      - git config --global user.name "Website Deployment Script"
-      - echo "machine github.com login $GIT_USER password $GITHUB_TOKEN" > ~/.netrc
-      # install Docusaurus and generate file of English strings
-      - cd website && npm install && npm run write-translations && cd ..
-      # crowdin install
-      - sudo apt-get install default-jre
-      - wget https://artifacts.crowdin.com/repo/deb/crowdin.deb -O crowdin.deb
-      - sudo dpkg -i crowdin.deb
-      # translations upload/download
-      - crowdin --config crowdin.yaml upload sources --auto-update -b master
-      - crowdin --config crowdin.yaml download -b master
-      # build and publish website
-      - cd website && GIT_USER=$GIT_USER npm run deploy
+    steps:
+      - checkout
+      - run: 
+          name: Deploying to GitHub Pages
+          command: |
+            git config --global user.email "$GIT_USER@users.noreply.github.com"
+            git config --global user.name "$GIT_USER"
+            echo "machine github.com login $GIT_USER password $GITHUB_TOKEN" > ~/.netrc
+            cd website && yarn install && GIT_USER=$GIT_USER yarn run deploy
+
+workflows:
+  version: 2
+  build_and_deploy:
+    jobs:
+      - deploy-website:
+        filters: *filter-only-master  
