--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ aliases:
 
 version: 2
 jobs:
-  deploy-website:
+  build:
     docker:
       # specify the version you desire here
       - image: circleci/node:7.10
@@ -28,5 +28,5 @@ workflows:
   version: 2
   build_and_deploy:
     jobs:
-      - deploy-website:
+      - build:
         filters: *filter-only-master  
