--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
       - run: 
           name: Deploying to GitHub Pages
           command: |
-            git config --global user.email "$GIT_USER@users.noreply.github.com"
-            git config --global user.name "$GIT_USER"
+            git config --global user.email "rafaelnsantos@users.noreply.github.com"
+            git config --global user.name "Rafael"
             echo "machine github.com login $GIT_USER password $GITHUB_TOKEN" > ~/.netrc
             cd website && yarn install && GIT_USER=$GIT_USER yarn run deploy
